egonlang-core/res/examples/invalid/if_else_expression_with_unit_expr_as_cond_then_else.eg
if void { void } else { void };

// out: SyntaxError: unexpected "void"; expected: ["\"(\""]
// out: SyntaxError: unexpected "{"; expected: ["\"!=\"", "\"%\"", "\")\"", "\"*\"", "\"+\"", "\",\"", "\"-\"", "\"/\"", "\";\"", "\"<\"", "\"<=\"", "\"==\"", "\">\"", "\">=\"", "\"]\"", "\"and\"", "\"or\"", "\"}\""]
// out: SyntaxError: unexpected "else"; expected: ["\")\"", "\",\"", "\";\"", "\"]\"", "\"}\""]